@@ -6,6 +6,8 @@ Version 6.0.5 - not yet released
 * devices:
   - EWMicroRecorder: fix hang during task declaration
   - FLARM: parse PGRMZ as altitude above 1013.25 hPa
+* user interface
+  - scale the "Today Screen" buttons on large screens
 * Android
   - fix bitmap loading on Samsung Galaxy Tab
   - show Bluetooth device names in configuration dialog
